feat(bff): skill在线编辑&git版本管理
